--- a/project-parliament/package.json
+++ b/project-parliament/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "next": "14.2.3",
