--- a/project-parliament/package.json
+++ b/project-parliament/package.json
@@ -12,7 +12,7 @@
     "@material-tailwind/react": "^2.1.9",
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
@@ -21,10 +21,12 @@
     "topojson": "^3.0.2"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "18.2.42",
     "@types/react-dom": "^18",
+    "@types/topojson-client": "^3.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
