--- a/project-parliament/package.json
+++ b/project-parliament/package.json
@@ -13,6 +13,7 @@
     "d3": "^7.9.0",
     "leaflet": "^1.9.4",
     "next": "^14.2.3",
+    "project-parliament": "file:",
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
